--- a/src/components/Cards/IngredientCard.module.css
+++ b/src/components/Cards/IngredientCard.module.css
@@ -1,6 +1,6 @@
 .cardImg {
     width: 100%;
-    height: 60%;
+    height: 45%;
 }
 
 .cardDesc {
