--- a/src/components/Cards/RecipeBookCard.module.css
+++ b/src/components/Cards/RecipeBookCard.module.css
@@ -1,11 +1,11 @@
 .cardImg {
     width: 100%;
-    height: 60%;
+    height: 45%;
 }
 
 .cardDesc {
     width: 100%;
-    height: 30%;
+    height: 33%;
     background-color: rgb(61, 131, 97);
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
